# VideoEncodingServer

./: CMakeLists.txt  README.md
VideoEncodingServer/: CMakeLists.txt  main.cpp
VideoEncodingServer/src/Controllers/REST/: RestAPI.cpp  RestAPI.h
VideoEncodingServer/src/Controllers/REST/Routes/: VideoEncodingRoutes.cpp  VideoEncodingRoutes.h
VideoEncodingServer/src/Models/: Models.cpp  Models.h
VideoEncodingServer/src/Server/: Server.cpp  Server.h
VideoEncodingServer/src/VideoEncoder/: VideoEncoder.cpp  VideoEncoder.h
